[5443] Add new rules to PMD - logging + migrating